@@ -13,13 +13,13 @@ require_once("./php/db.php");
     <link rel="gettext" type="application/x-po" href="/locale/<?php echo $locale?>/LC_MESSAGES/messages.po?20090715" />
     <link rel="icon" type="image/png" href="/img/icon_favicon.png"/>
     <script type="text/javascript" src="/OpenLayers.js?version=20091204"></script>
-    <script type="text/javascript" src="/js/greatcircle.js?version=20100107"></script>
+    <script type="text/javascript" src="/js/greatcircle.js?version=20100108"></script>
     <script type="text/javascript" src="/js/utilities.js?version=20090326"></script>
     <script type="text/javascript" src="/js/Gettext.js"></script>
     <script type="text/javascript" src="/js/scw.js"></script>
     <script type="text/javascript" src="/js/prototype.js?version=20090326"></script>
     <script type="text/javascript" src="/js/scriptaculous.js?version=20091230"></script>
-    <script type="text/javascript" src="/openflights.js?version=20100107"></script>
+    <script type="text/javascript" src="/openflights.js?version=20100108"></script>
   </head>
 
   <body>
